welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: reassignment to val
  if (getCouleurSol = "Color.green" ) {return true}
                    ^